hphp/hack/test/typecheck/type_arity/class_const_tarity.php.exp
File "class_const_tarity.php", line 8, characters 9-11:
The type Bar expects 1 type parameter(s) (Typing[4101])
File "class_const_tarity.php", line 3, characters 6-8:
Definition is here
